--- a/index.html
+++ b/index.html
@@ -55,6 +55,36 @@
     </ul>
 
     <p>More updates coming soon – including diagrams, screenshots, and GitHub-hosted docs.</p>
+
+    <hr>
+<h2>💻 Project Tabs</h2>
+
+<div class="tabs">
+  <button class="tab-btn active" onclick="showTab('windows')">Windows Lab</button>
+  <button class="tab-btn" onclick="showTab('linux')">Linux Lab</button>
+  <button class="tab-btn" onclick="showTab('firewall')">Firewall Setup</button>
+</div>
+
+<div class="tab-content" id="windows">
+  <h3>Windows Environment Lab</h3>
+  <p>This lab simulates a basic Windows network domain. Below are screenshots:</p>
+  <div class="carousel">
+    <img src="screenshot1.png" alt="Screenshot 1">
+    <img src="screenshot2.png" alt="Screenshot 2">
+    <img src="screenshot3.png" alt="Screenshot 3">
+  </div>
+</div>
+
+<div class="tab-content" id="linux" style="display:none">
+  <h3>Linux Lab</h3>
+  <p>Linux network configurations and services will be detailed here.</p>
+</div>
+
+<div class="tab-content" id="firewall" style="display:none">
+  <h3>Firewall (pfSense)</h3>
+  <p>Firewall configuration and rules for network segmentation.</p>
+</div>
+
   </main>
 
   <footer>
