--- a/index.html
+++ b/index.html
@@ -35,6 +35,44 @@
       color: #888;
       margin-top: 3rem;
     }
+    .tabs {
+  margin-top: 2rem;
+  text-align: center;
+}
+.tab-btn {
+  background-color: #ddd;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 5px 5px 0 0;
+}
+.tab-btn.active {
+  background-color: #fff;
+  border-bottom: 2px solid transparent;
+}
+.tab-content {
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  border-radius: 0 5px 5px 5px;
+  margin-top: -1px;
+}
+
+.carousel {
+  display: flex;
+  overflow-x: auto;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+.carousel img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+
   </style>
 </head>
 <body>
