--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ve<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -129,7 +129,7 @@
     &copy; 2025 Jeffrey Betancur · jeffbeta12.github.io
   </footer>
   <script>
-  function showTab(id) {
+  function showTab(id, event) {
     const tabs = document.querySelectorAll('.tab-content');
     const buttons = document.querySelectorAll('.tab-btn');
 
