--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ ve<!DOCTYPE html>
 <h2>💻 Project Tabs</h2>
 
 <div class="tabs">
-  <button class="tab-btn active" onclick="showTab('windows')">Windows Lab</button>
-  <button class="tab-btn" onclick="showTab('linux')">Linux Lab</button>
-  <button class="tab-btn" onclick="showTab('firewall')">Firewall Setup</button>
+  <button class="tab-btn active" onclick="showTab('windows', event)">Windows Lab</button>
+  <button class="tab-btn" onclick="showTab('linux', event)">Linux Lab</button>
+  <button class="tab-btn" onclick="showTab('firewall', event)">Firewall Setup</button>
 </div>
 
 <div class="tab-content" id="windows">
