--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@ ve<!DOCTYPE html>
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 
+    table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 1rem;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+th {
+  background-color: #f4f4f4;
+}
+
   </style>
 </head>
 <body>
@@ -107,6 +121,50 @@ ve<!DOCTYPE html>
   <h3>Windows Environment Lab</h3>
   <p>This lab simulates a basic Windows network domain. Below are screenshots:</p>
   <div class="carousel">
+    <h4>VM Resource Allocation</h4>
+<table>
+  <thead>
+    <tr>
+      <th>VM Name</th>
+      <th>OS / Role</th>
+      <th>RAM (GB)</th>
+      <th>Storage (GB)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>pfSense</td>
+      <td>Virtual firewall/router</td>
+      <td>1</td>
+      <td>10</td>
+    </tr>
+    <tr>
+      <td>Active Directory DC</td>
+      <td>Windows Server 2019 AD/DNS</td>
+      <td>4</td>
+      <td>60</td>
+    </tr>
+    <tr>
+      <td>Windows Client</td>
+      <td>Windows 10 domain client</td>
+      <td>4</td>
+      <td>40</td>
+    </tr>
+    <tr>
+      <td>Apache Web Server</td>
+      <td>Ubuntu + Apache</td>
+      <td>2</td>
+      <td>20</td>
+    </tr>
+    <tr>
+      <td>File Server</td>
+      <td>Windows Server (SMB Shares)</td>
+      <td>4</td>
+      <td>50</td>
+    </tr>
+  </tbody>
+</table>
+
     <img src="screenshot1.png" alt="Screenshot 1">
     <img src="screenshot2.png" alt="Screenshot 2">
     <img src="screenshot3.png" alt="Screenshot 3">
