--- a/index.html
+++ b/index.html
@@ -116,13 +116,6 @@
 
     <div class="tab-content" id="windows">
       <h3>Windows Environment Lab</h3>
-      <p>This lab simulates a basic Windows network domain. Below are screenshots:</p>
-      
-      <div class="carousel">
-        <img src="screenshot1.png" alt="Screenshot 1">
-        <img src="screenshot2.png" alt="Screenshot 2">
-        <img src="screenshot3.png" alt="Screenshot 3">
-      </div>
 
       <h4>VM Resource Allocation</h4>
       <table>
@@ -167,6 +160,14 @@
           </tr>
         </tbody>
       </table>
+
+      <p style="margin-top: 2rem;">This lab simulates a basic Windows network domain. Below are screenshots:</p>
+
+      <div class="carousel">
+        <img src="screenshot1.png" alt="Screenshot 1">
+        <img src="screenshot2.png" alt="Screenshot 2">
+        <img src="screenshot3.png" alt="Screenshot 3">
+      </div>
     </div>
 
     <div class="tab-content" id="linux" style="display:none">
