--- a/index.html
+++ b/index.html
@@ -84,11 +84,14 @@
     th {
       background-color: #f4f4f4;
     }
+    .slideshow-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2rem;
+      margin-top: 2rem;
+    }
     .slideshow-container {
       position: relative;
-      width: 100%;
-      max-width: 600px;
-      margin: 2rem auto;
       background: #f9f9f9;
       padding: 1rem;
       border-radius: 10px;
@@ -107,7 +110,7 @@
       top: 50%;
       transform: translateY(-50%);
       font-size: 2rem;
-      background: rgba(255, 255, 255, 0.4);
+      background: rgba(255, 255, 255, 0.3);
       border: none;
       cursor: pointer;
       padding: 0 1rem;
@@ -145,12 +148,7 @@
       <h4>VM Resource Allocation</h4>
       <table>
         <thead>
-          <tr>
-            <th>VM Name</th>
-            <th>OS / Role</th>
-            <th>RAM (GB)</th>
-            <th>Storage (GB)</th>
-          </tr>
+          <tr><th>VM Name</th><th>OS / Role</th><th>RAM (GB)</th><th>Storage (GB)</th></tr>
         </thead>
         <tbody>
           <tr><td>pfSense</td><td>Virtual firewall/router</td><td>1</td><td>10</td></tr>
@@ -160,6 +158,45 @@
           <tr><td>File Server</td><td>Windows Server (SMB Shares)</td><td>4</td><td>50</td></tr>
         </tbody>
       </table>
+      <hr>
+      <h2>📸 Lab Screenshots</h2>
+      <div class="slideshow-grid">
+        <div class="slideshow-container">
+          <h3>Active Directory</h3>
+          <button class="arrow left" onclick="changeSlide(0, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(0, 1)">&#10095;</button>
+          <img src="ad1.png" class="slide-img slide-0 active">
+          <img src="ad2.png" class="slide-img slide-0">
+        </div>
+        <div class="slideshow-container">
+          <h3>pfSense</h3>
+          <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(1, 1)">&#10095;</button>
+          <img src="pf1.png" class="slide-img slide-1 active">
+          <img src="pf2.png" class="slide-img slide-1">
+        </div>
+        <div class="slideshow-container">
+          <h3>Windows Client</h3>
+          <button class="arrow left" onclick="changeSlide(2, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(2, 1)">&#10095;</button>
+          <img src="client1.png" class="slide-img slide-2 active">
+          <img src="client2.png" class="slide-img slide-2">
+        </div>
+        <div class="slideshow-container">
+          <h3>Web Server</h3>
+          <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(3, 1)">&#10095;</button>
+          <img src="web1.png" class="slide-img slide-3 active">
+          <img src="web2.png" class="slide-img slide-3">
+        </div>
+        <div class="slideshow-container">
+          <h3>File Server</h3>
+          <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
+          <button class="arrow right" onclick="changeSlide(4, 1)">&#10095;</button>
+          <img src="file1.png" class="slide-img slide-4 active">
+          <img src="file2.png" class="slide-img slide-4">
+        </div>
+      </div>
     </div>
     <div class="tab-content" id="linux" style="display:none">
       <h3>Linux Lab</h3>
@@ -169,9 +206,6 @@
       <h3>Firewall (pfSense)</h3>
       <p>Firewall configuration and rules for network segmentation.</p>
     </div>
-    <hr>
-    <h2>📸 Lab Screenshots</h2>
-    <div id="slides-wrapper"></div>
   </main>
   <footer>
     &copy; 2025 Jeffrey Betancur · jeffbeta12.github.io
@@ -185,27 +219,7 @@
       buttons.forEach(btn => btn.classList.remove('active'));
       event.target.classList.add('active');
     }
-
-    const slides = {
-      "Active Directory": ["ad1.png", "ad2.png", "ad3.png"],
-      "pfSense": ["pf1.png", "pf2.png"],
-      "Windows Client": ["client1.png", "client2.png"],
-      "Web Server": ["web1.png", "web2.png"],
-      "File Server": ["file1.png", "file2.png"]
-    };
-
-    const wrapper = document.getElementById("slides-wrapper");
-    Object.entries(slides).forEach(([title, images], idx) => {
-      let html = `<div class="slideshow-container">
-        <h3>${title}</h3>
-        <button class="arrow left" onclick="changeSlide(${idx}, -1)">&#10094;</button>
-        <button class="arrow right" onclick="changeSlide(${idx}, 1)">&#10095;</button>
-        ${images.map((src, i) => `<img src="${src}" class="slide-img slide-${idx} ${i === 0 ? 'active' : ''}" />`).join('')}
-      </div>`;
-      wrapper.innerHTML += html;
-    });
-
-    const current = Array(Object.keys(slides).length).fill(0);
+    const current = [0, 0, 0, 0, 0];
     function changeSlide(group, direction) {
       const imgs = document.querySelectorAll(`.slide-${group}`);
       imgs[current[group]].classList.remove("active");
