--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
       padding: 1rem;
       border-radius: 0 5px 5px 5px;
       margin-top: -1px;
-      display: none;
-    }
-    .tab-content.active {
-      display: block;
     }
     .carousel {
       display: flex;
@@ -88,29 +84,19 @@
     th {
       background-color: #f4f4f4;
     }
-    .slideshow-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2rem;
-      margin-top: 2rem;
-    }
     .slideshow-container {
       position: relative;
+      width: 100%;
+      max-width: 600px;
+      margin: 2rem auto;
       background: #f9f9f9;
       padding: 1rem;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      width: 100%;
-      aspect-ratio: 1 / 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
     .slide-img {
       display: none;
       width: 100%;
-      height: 100%;
-      object-fit: contain;
       border-radius: 8px;
     }
     .slide-img.active {
@@ -121,7 +107,7 @@
       top: 50%;
       transform: translateY(-50%);
       font-size: 2rem;
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.4);
       border: none;
       cursor: pointer;
       padding: 0 1rem;
@@ -138,17 +124,33 @@
     <p>Built on my HP Envy · Powered by VirtualBox</p>
   </header>
   <main>
+    <h2>My Virtual Lab Setup</h2>
+    <p>This lab simulates a professional enterprise network for testing and learning:</p>
+    <ul>
+      <li><strong>pfSense</strong> – Virtual firewall/router</li>
+      <li><strong>Active Directory</strong> – Domain Controller (jeff.local)</li>
+      <li><strong>Windows Client</strong> – Joined to AD domain</li>
+      <li><strong>Ubuntu Apache Server</strong> – Web server with HTML content</li>
+      <li><strong>File Server</strong> – Shares via SMB</li>
+    </ul>
+    <hr>
+    <h2>💻 Project Tabs</h2>
     <div class="tabs">
       <button class="tab-btn active" onclick="showTab('windows', event)">Windows Lab</button>
       <button class="tab-btn" onclick="showTab('linux', event)">Linux Lab</button>
       <button class="tab-btn" onclick="showTab('firewall', event)">Firewall Setup</button>
     </div>
-    <div class="tab-content active" id="windows">
+    <div class="tab-content" id="windows">
       <h3>Windows Environment Lab</h3>
       <h4>VM Resource Allocation</h4>
       <table>
         <thead>
-          <tr><th>VM Name</th><th>OS / Role</th><th>RAM (GB)</th><th>Storage (GB)</th></tr>
+          <tr>
+            <th>VM Name</th>
+            <th>OS / Role</th>
+            <th>RAM (GB)</th>
+            <th>Storage (GB)</th>
+          </tr>
         </thead>
         <tbody>
           <tr><td>pfSense</td><td>Virtual firewall/router</td><td>1</td><td>10</td></tr>
@@ -158,47 +160,18 @@
           <tr><td>File Server</td><td>Windows Server (SMB Shares)</td><td>4</td><td>50</td></tr>
         </tbody>
       </table>
-      <div class="slideshow-grid">
-        <div class="slideshow-container">
-          <button class="arrow left" onclick="changeSlide(0,-1)">&#10094;</button>
-          <img src="ad1.png" class="slide-img slide-0 active">
-          <img src="ad2.png" class="slide-img slide-0">
-          <button class="arrow right" onclick="changeSlide(0,1)">&#10095;</button>
-        </div>
-        <div class="slideshow-container">
-          <button class="arrow left" onclick="changeSlide(1,-1)">&#10094;</button>
-          <img src="pfsense1.png" class="slide-img slide-1 active">
-          <img src="pfsense2.png" class="slide-img slide-1">
-          <button class="arrow right" onclick="changeSlide(1,1)">&#10095;</button>
-        </div>
-        <div class="slideshow-container">
-          <button class="arrow left" onclick="changeSlide(2,-1)">&#10094;</button>
-          <img src="client1.png" class="slide-img slide-2 active">
-          <img src="client2.png" class="slide-img slide-2">
-          <button class="arrow right" onclick="changeSlide(2,1)">&#10095;</button>
-        </div>
-        <div class="slideshow-container">
-          <button class="arrow left" onclick="changeSlide(3,-1)">&#10094;</button>
-          <img src="web1.png" class="slide-img slide-3 active">
-          <img src="web2.png" class="slide-img slide-3">
-          <button class="arrow right" onclick="changeSlide(3,1)">&#10095;</button>
-        </div>
-        <div class="slideshow-container">
-          <button class="arrow left" onclick="changeSlide(4,-1)">&#10094;</button>
-          <img src="file1.png" class="slide-img slide-4 active">
-          <img src="file2.png" class="slide-img slide-4">
-          <button class="arrow right" onclick="changeSlide(4,1)">&#10095;</button>
-        </div>
-      </div>
     </div>
-    <div class="tab-content" id="linux">
+    <div class="tab-content" id="linux" style="display:none">
       <h3>Linux Lab</h3>
       <p>Linux network configurations and services will be detailed here.</p>
     </div>
-    <div class="tab-content" id="firewall">
+    <div class="tab-content" id="firewall" style="display:none">
       <h3>Firewall (pfSense)</h3>
       <p>Firewall configuration and rules for network segmentation.</p>
     </div>
+    <hr>
+    <h2>📸 Lab Screenshots</h2>
+    <div id="slides-wrapper"></div>
   </main>
   <footer>
     &copy; 2025 Jeffrey Betancur · jeffbeta12.github.io
@@ -207,12 +180,32 @@
     function showTab(id, event) {
       const tabs = document.querySelectorAll('.tab-content');
       const buttons = document.querySelectorAll('.tab-btn');
-      tabs.forEach(tab => tab.classList.remove('active'));
+      tabs.forEach(tab => tab.style.display = 'none');
+      document.getElementById(id).style.display = 'block';
       buttons.forEach(btn => btn.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
       event.target.classList.add('active');
     }
-    const current = [0, 0, 0, 0, 0];
+
+    const slides = {
+      "Active Directory": ["ad1.png", "ad2.png", "ad3.png"],
+      "pfSense": ["pf1.png", "pf2.png"],
+      "Windows Client": ["client1.png", "client2.png"],
+      "Web Server": ["web1.png", "web2.png"],
+      "File Server": ["file1.png", "file2.png"]
+    };
+
+    const wrapper = document.getElementById("slides-wrapper");
+    Object.entries(slides).forEach(([title, images], idx) => {
+      let html = `<div class="slideshow-container">
+        <h3>${title}</h3>
+        <button class="arrow left" onclick="changeSlide(${idx}, -1)">&#10094;</button>
+        <button class="arrow right" onclick="changeSlide(${idx}, 1)">&#10095;</button>
+        ${images.map((src, i) => `<img src="${src}" class="slide-img slide-${idx} ${i === 0 ? 'active' : ''}" />`).join('')}
+      </div>`;
+      wrapper.innerHTML += html;
+    });
+
+    const current = Array(Object.keys(slides).length).fill(0);
     function changeSlide(group, direction) {
       const imgs = document.querySelectorAll(`.slide-${group}`);
       imgs[current[group]].classList.remove("active");
