--- a/index.html
+++ b/index.html
@@ -96,10 +96,17 @@
       padding: 1rem;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      aspect-ratio: 1 / 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
     .slide-img {
       display: none;
       width: 100%;
+      height: 100%;
+      object-fit: cover;
       border-radius: 8px;
     }
     .slide-img.active {
