--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
     .slideshow-container {
       position: relative;
       background: #f9f9f9;
+      height: 260px;
+      width: 260px;
       padding: 1rem;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      aspect-ratio: 1 / 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
