--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <h3>Active Directory</h3>
           <button class="arrow left" onclick="changeSlide(0, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(0, 1)">&#10095;</button>
-          <img src="ad1.png" class="slide-img slide-0 active">
+          <img src="ADVMinfo.png" class="slide-img slide-0 active">
           <img src="ad2.png" class="slide-img slide-0">
         </div>
         <div class="slideshow-container">
