--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
     <p>Built on my HP Envy · Powered by VirtualBox</p>
   </header>
   <main>
-    <!-- content here remains the same -->
-    <!-- existing slideshow HTML is untouched -->
+    <!-- retain existing working HTML layout, including tab and slideshows -->
   </main>
   <div class="modal" id="lightboxModal" onclick="closeModal(event)">
     <button class="arrow left" onclick="navigateModal(-1, event)">&#10094;</button>
